--- a/public/css/style.css
+++ b/public/css/style.css
@@ -6,9 +6,6 @@ body {
   }
 
 .container {
-  /*display:flex;
-  align-items: center;
-  flex-direction: column;*/
   width: 600px;
   margin: 0 auto;
 }
@@ -21,8 +18,9 @@ body {
 .game-info {
    display: flex;
    justify-content: center;
-   font-size: 26px;
-   margin:20px 0;
+   font-size: 30px;
+   margin:30px 0;
+   color:rgb(243, 140, 14);
 }
 
 .game-space {
@@ -35,9 +33,6 @@ body {
    font-size: 20px;
 }
 
-/*.final_count {
-   font-size: 20px;
-}*/
 .final_count__values {
    display: inline-block;
    font-size: 26px;
@@ -79,19 +74,15 @@ body {
  }
 
  #restart_button {
-   /*display:block;*/
-   background-color: darkcyan;
+   background-color: darkorange;
    width: 180px;
    height: 39px;
    cursor: pointer;
-   font-size:15px;
+   font-size:18px;
    line-height: 39px; 
    color: white;
-   font-size: 16px;
    text-align: center;
    text-decoration: none;
    border: none;
    border-radius: 2.5px;
-
-   /*margin-top:20px;*/
 }
